<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AEDマップ.jp</string>
    <string name="map_dev_key" >0MMOEhZjjditqYMOnN5bwp_kApvCgcXNmM8j-Ow</string>
    <string name="map_api_key">0MMOEhZjjditqYMOnN5bwp_kApvCgcXNmM8j-Ow</string>
    <string name="tab_map">マップ</string>
    <string name="tab_list">リスト</string>
    <string name="tab_edit">登録</string>
    <string name="current_location">現在地</string>
    <string name="button_my_location">現在地</string>
    <string name="button_search_address">住所検索</string>
    <string name="button_gps_setting">GPS設定</string>
    <string name="button_emergency">救命救急法</string>
    <string name="label_location">中心点：</string>
    <string name="text_location">住所を表示</string>
    <string name="list_title">※マップの中心点からの距離順</string>
    <string name="edit_mode_notification">編集モードです.マーカーの新規登録、修正、削除ができます.位置を変更する場合はマーカーを長押しして移動させてください.</string>
        
    <string name="http_server_error">サーバーに接続できません\nしばらく経ってからアクセスしてください</string>
    <string name="http_syntax_error">URLに誤りがあります</string>
    <string name="http_unknown_host">サーバが見つかりません</string>
    <string name="http_network_error">ネットワークエラーが発生しました</string>
    <string name="http_unkown_error">不明なエラーが発生しました</string>
    <string name="http_illegal_state">URLのサーバ記述がありません</string>
    <string name="http_parse_error">データの解析に失敗しました</string>
    <string name="http_io_error">サーバーに接続できません\n電波が届く所に移動してください</string>
    <string name="http_parameter_error">パラメータに誤りがあります</string>

    <string name="msg_location_fail">住所が取得できませんでした</string>
    <string name="msg_query_fail">検索に失敗しました</string>
    <string name="msg_result_zero">検索結果が0件でした</string>
    <string name="msg_some_location">複数の候補が見つかりました</string>
    <string name="search_label">住所検索</string>
    <!--
    <string name="search_label"></string>
    <string name="search_label">住所検索</string>
    -->
    <string name="search_hint">住所・施設名で検索</string>
    <string name="header_src">情報源：%s</string>
    <string name="header_spl">補足：%s</string>
        
    <string name="hint_title">場所名</string>
    <string name="hint_snipet">住所</string>
    <string name="hint_able">利用可能時間帯</string>
    <string name="hint_src">情報源</string>
    <string name="hint_spl">補足事項、電話番号</string>
    <string name="button_save">上書き</string>
    <string name="button_save_new">投稿する</string>
    <string name="button_abort">元に戻す</string>
    <string name="button_abort_new">破棄する</string>
    <string name="button_delete">削除</string>
    <string name="button_yes">はい</string>
    <string name="button_no">いいえ</string>
    <string name="button_cancel">キャンセル</string>
    <string name="dialog_save_message">AEDマーカーを上書き保存します\nよろしいですか</string>
    <string name="dialog_save_new_message">AEDマーカーを投稿します\nよろしいですか</string>
    <string name="dialog_delete_message">AEDのマーカーを削除します\nよろしいですか</string>
    <string name="dialog_abort_message">編集前の状態に戻します\nよろしいですか</string>
    <string name="dialog_abort_new_message">AEDマーカーを破棄します\nよろしいですか</string>
    <string name="menu_view">表示モード</string>
    <string name="menu_edit">編集モード</string>
    <string name="menu_help">ヘルプ</string>
    <string name="toggle_gps_on">GPS ON</string>
    <string name="toggle_gps_off">GPS OFF</string>
    <string name="toggle_wifi_on">Wi-Fi ON</string>
    <string name="toggle_wifi_off">Wi-Fi OFF</string>
</resources>