<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/balloon_main_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/balloon_overlay_bg_selector"
    android:minWidth="200dip"
    android:orientation="vertical"
    android:paddingBottom="20dip"
    android:paddingLeft="10dip"
    android:paddingRight="0dip"
    android:paddingTop="0dip" >

	<LinearLayout
	    android:id="@+id/balloon_inner_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:orientation="horizontal" >

		<EditText
		    android:id="@+id/balloon_item_title"
		    android:layout_width="wrap_content"
		    android:layout_height="36dip"
		    android:layout_weight="1"
		    android:hint="@string/hint_title"
		    android:text="balloon_item_title"
		    android:textColor="@android:color/primary_text_light"
		    android:textSize="16dip" android:layout_marginTop="10dip" android:inputType="text">

		    <requestFocus />
		</EditText>

		<ImageView
		    android:id="@+id/balloon_close"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingBottom="10dip"
		    android:paddingLeft="10dip"
		    android:paddingRight="8dip"
		    android:paddingTop="8dip"
		    android:src="@drawable/balloon_overlay_close" />

	</LinearLayout>

	<LinearLayout
	    android:id="@+id/linearLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:orientation="vertical" android:layout_marginRight="10dip">

		<EditText
		    android:id="@+id/balloon_item_snippet"
		    android:layout_width="fill_parent"
		    android:layout_height="34dp"
		    android:hint="@string/hint_snipet"
		    android:text="balloon_item_snippet"
		    android:textColor="@android:color/secondary_text_light"
		    android:textSize="12dip" android:inputType="text"/>

		<EditText
		    android:id="@+id/balloon_item_able"
		    android:layout_width="fill_parent"
		    android:layout_height="34dp"
		    android:hint="@string/hint_able"
		    android:text="balloon_item_able"
		    android:textColor="@android:color/secondary_text_light"
		    android:textSize="12dip" android:inputType="text"/>

		<EditText
		    android:id="@+id/balloon_item_src"
		    android:layout_width="fill_parent"
		    android:layout_height="34dip"
		    android:layout_weight="1"
		    android:hint="@string/hint_src"
		    android:text="balloon_item_src"
		    android:textColor="@android:color/secondary_text_light"
		    android:textSize="12dip" android:inputType="text"/>

		<EditText
		    android:id="@+id/balloon_item_spl"
		    android:layout_width="fill_parent"
		    android:layout_height="34dip"
		    android:hint="@string/hint_spl"
		    android:text="balloon_item_spl"
		    android:textColor="@android:color/secondary_text_light"
		    android:textSize="12dip" android:inputType="text"/>

	</LinearLayout>

	<LinearLayout
	    android:id="@+id/linearLayout2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginRight="10dip" android:gravity="center_vertical">

		<Button
		    android:id="@+id/button_save"
		    android:layout_width="wrap_content"
		    android:layout_height="36dip"
		    android:text="@string/button_save"
		    android:textSize="12dip" android:layout_gravity="left" android:layout_weight="1"/>

		<Button
		    android:id="@+id/button_delete"
		    android:layout_width="wrap_content"
		    android:layout_height="36dip"
		    android:text="@string/button_delete"
		    android:textSize="12dip" android:layout_gravity="center_horizontal" android:layout_weight="1"/>

		<Button
		    android:id="@+id/button_cancel"
		    android:layout_width="wrap_content"
		    android:layout_height="36dip"
		    android:text="@string/button_cancel"
		    android:textSize="12dip" android:layout_gravity="right" android:layout_weight="1"/>

	</LinearLayout>

</LinearLayout>
