<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frameLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <com.tcf_corp.android.map.CustomMapView
                android:id="@+id/mapview"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:apiKey="@string/map_api_key"
                android:clickable="true" >
            </com.tcf_corp.android.map.CustomMapView>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_center" />

            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" android:layout_alignParentRight="true" android:layout_alignParentTop="true"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ToggleButton
                    android:id="@+id/button_gps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ToggleButton"
                    android:textOff="GPS OFF"
                    android:textOn="GPS ON" />

                <ToggleButton
                    android:id="@+id/button_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ToggleButton"
                    android:textOff="Wi-Fi OFF"
                    android:textOn="Wi-Fi ON" />

                <ToggleButton
                    android:id="@+id/button_my_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_my_location"
                    android:textOff="@string/button_my_location"
                    android:textOn="@string/button_my_location" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:background="@drawable/address_background">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_location"
                    android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/text_address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_location"
                    android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
